
Nov 20th MT9 (Peter) - Git Logs tell me that there is a merge error. Trying to fix it right now.
Nov 20th PU19 (Peter) - JFocus2 Update V1
Nov 20th PU20 (Peter) - JFocus2 Update V2
Nov 20th PU21 (Peter) - JFocus2 Update V3
Nov 20th PU22 (Peter) - JFocus2 Update V4
Nov 20th PU23 (Peter) - File allocation changed
Nov 20th PU24 (Peter) - File size change
Nov 20th PU25 (Peter) - Main and JFocus File redirect changed with the Change Log recieving a slight update
Nov 20th NULL58297693868934354543 (Peter) - Main title added back
Nov 20th PU26 (Peter) - Fixed a bug (I think)

IT'S MY BIRTHDAY!!! 🎂
Nov 21th PU27 (Peter) - I fixed the bug but that created another bug so... yeah. Fixed that one too! (Never happened, got replaced/done by the BIRTHDAY1 update.)
Nov 21st BIRTHDAY1 (Peter) - Birthday Update!
Nov 21st Cls10 (Peter) - Made JFocus3B
Nov 21st PU28 (Peter) - Main JFocus Universal Navigator button made larger
Nov 21st MT10 (Peter) - Alerts gone
Nov 21st MT11 (Peter) - Spelling refreshed
Nov 21st MT12 (Peter) - Spelling refreshed

It's not my birthday... 😢
Nov 22nd BIRTHDAY2 (Peter) - No Birthday Update...

Nov 22nd Cls11 (Peter) - JFocus 4 Dev Alert/Update

Nov 27th PU30 (Peter) - JFocus 4 Dev Alert/Update 2
Nov 27th PU31 (Peter) - Massive Backbone update. Imma go to sleep real quick 😴

Nov 29th PU32 (Peter) - No real large changes. There is a new JFocus dev view tho.
Nov 30th PU33 (Peter) - No real changes. Just another button!

Nov 30th NVA1 (Peter) - Three.js html file added
Nov 30th NVA2 (Peter) - Three.js html file updated
Nov 30th NVA3 (Peter) - Three.js html file updated
Nov 30th NVA4 (Peter) - Three.js JS file added
Nov 30th NVA5 (Peter) - Three.js JS file updated

Dec 4th Cls12 (Peter) - JFocus 4 Update Complete.
Dec 4th Cls13 (Peter) - JFocus 4 Update Complete 2.


Thanks for taking your time to read the change log! 
I might sound cold in many of the update descriptions, but it's like that just for time efficiency. 
Have a nice day! :)