@@ -1,0 +1,18 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>DroneDash</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+        <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type = "text/css" href="mainCSS.css">
+    </head>
+    <script src = "mainJS.js">
+
+    </script>
+    <body class = "flexBody">
+        <article class = "flexArticle">
+            <h1>HELLO WORLD!!!</h1>
+        </article>
+    </body>
+</html>
